--- a/django/django-instagram-clone_kindfamily/instaclone-backend/post/templates/post/script_ajax_detail.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-backend/post/templates/post/script_ajax_detail.html
@@ -75,7 +75,7 @@
 
         $.ajax({
           type: 'POST',
-          url: "{% url 'post:comment_new' %}",
+          url: "{% url 'post:comment_new_detail' %}",
           data: {
             'pk': pk,
             'content': content,
