--- a/django/django-instagram-clone_kindfamily/instaclone-backend/config/templates/layout.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-backend/config/templates/layout.html
@@ -67,7 +67,7 @@
             <a href="#"><div class="sprite_compass_icon"></div></a>
             <a href="#"><div class="sprite_heart_icon_outline"></div></a>
             {% if user.is_authenticated %}
-            <a href="{% url 'accounts:logout' %}"><div class="sprite_user_icon_outline"></div></a>
+            <a href="{% url 'post:my_post_list' user.username %}"><div class="sprite_user_icon_outline"></div></a>
             {% else %}
             <a href="{% url 'accounts:login' %}"><div class="sprite_user_icon_outline"></div></a>
             {% endif %}
