--- a/django/django-rest-framework/ch2_photo/photo/templates/photo/photo_detail.html
+++ b/django/django-rest-framework/ch2_photo/photo/templates/photo/photo_detail.html
@@ -3,7 +3,9 @@
     <title>Photo App</title>
   </head>
   <body>
+    <h3><a href="/">뒤로가기</a></h3>
     <h1>{{ photo.title }}</h1>
+    <h3><a href="{% url 'photo_edit' pk=photo.pk %}">Edit Photo</a></h3>
     <section>
       <div>
         <img src="{{ photo.image }}" alt="{{ photo.title }}" width="300" />
