--- a/django/django-rest-framework/ch2_photo/photo/templates/photo/photo_list.html
+++ b/django/django-rest-framework/ch2_photo/photo/templates/photo/photo_list.html
@@ -3,12 +3,13 @@
     <title>Photo App</title>
   </head>
   <body>
-    <h1><a href="">사진 목록 페이지</a></h1>
+    <h1>사진 목록 페이지</h1>
+    <h3><a href="{% url 'photo_post' %}">New Photo</a></h3>
     <section>
       {% for photo in photos %}
       <div>
-        <h2><a href="{% url 'photo_detail' pk=photo.pk %}">{{ photo.title }}</a></h2>
-        <img src="{{ photo.image }}" alt="{{ photo.title }}" width="300" />
+        <h2>{{ photo.title }}</h2>
+        <a href="{% url 'photo_detail' pk=photo.pk %}"><img src="{{ photo.image }}" alt="{{ photo.title }}" width="300" /></a>
         <p>{{ photo.author }}, {{ photo.price }}원</p>
       </div>
       {% endfor %}
