--- a/flask/python-flask-web-app/apps/crud/templates/crud/index.html
+++ b/flask/python-flask-web-app/apps/crud/templates/crud/index.html
@@ -1,11 +1,21 @@
-<!DOCTYPE html>
-<html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <title>CRUD</title>
-    <link rel="stylesheet" href="{{ url_for('crud.static', filename='style.css') }}">
-  </head>
-  <body>
-    <p class="crud">CRUD 애플리케이션</p>
-  </body>
-</html>
+{% extends "crud/base.html" %}
+{% block title %}사용자의 일람{% endblock %}
+{% block content %}
+<h2>사용자의 일람</h2>
+<a href="{{ url_for('crud.create_user') }}">사용자 신규 작성</a>
+<table>
+  <tr>
+    <th>사용자 ID</th>
+    <th>사용자명</th>
+    <th>메일 주소</th>
+  </tr>
+  {% for user in users %}
+  <tr>
+    <!-- a 태그로 링크를 추가한다. -->
+    <td><a href="{{ url_for('crud.edit_user', user_id=user.id) }}">{{ user.id }}</a></td>
+    <td>{{ user.username }}</td>
+    <td>{{ user.email }}</td>
+  </tr>
+  {% endfor %}
+</table>
+{% endblock %}
