--- a/flask/python-flask-web-app/apps/crud/templates/crud/base.html
+++ b/flask/python-flask-web-app/apps/crud/templates/crud/base.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <!-- title을 상속처에서 구현한다. -->
+    <!-- title을 상속처에서 구현한다 -->
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('crud.static', filename='style.css') }}">
   </head>
@@ -15,7 +15,7 @@
       </p>
       {% endif %}
     </div>
-    <!-- content를 상속처에서 구현한다. -->
+    <!-- content를 상속처에서 구현한다 -->
     {% block content %}{% endblock %}
   </body>
 </html>
