--- a/flask/python-flask-web-app/apps/detector/templates/detector/index.html
+++ b/flask/python-flask-web-app/apps/detector/templates/detector/index.html
@@ -1,6 +1,6 @@
 {% extends "detector/base.html" %}
 {% block content %}
-<!-- flash 오류를 표시한다. -->
+<!-- flash 오류를 표시한다 -->
 {% with messages = get_flashed_messages() %}
 {% if messages %}
 <ul>
@@ -10,16 +10,16 @@
 </ul>
 {% endif %}
 {% endwith %}
-<!-- 이미지 업로드 화면으로의 링크를 추가한다. -->
+<!-- 이미지 업로드 화면으로의 링크를 추가한다 -->
 <div class="col-md-10 text-right dt-image-register-btn">
   <a href="{{ url_for('detector.upload_image') }}" class="btn btn-primary">이미지 신규 등록</a>
 </div>
-<!-- 이미지 일람을 표시한다. -->
+<!-- 이미지 일람을 표시한다 -->
 {% for user_image in user_images %}
 <div class="card col-md-7 dt-image-content">
   <header class="d-flex justify-content-between">
     <div class="dt-image-username">{{ user_image.User.username }}</div>
-    <!-- 물체 감지 폼을 추가한다. -->
+    <!-- 물체 감지 폼을 추가한다 -->
     <div class="d-flex flex-row-reverse">
       <div class="p-2">
         <form action="{{ url_for('detector.detect', image_id=user_image.UserImage.id) }}" method="POST">
@@ -36,7 +36,7 @@
   <section>
     <img src="{{ url_for('detector.image_file', filename=user_image.UserImage.image_path) }}" alt="업로드 이미지">
   </section>
-  <!-- 태그 정보를 표시한다. -->
+  <!-- 태그 정보를 표시한다 -->
   <footer>
     {% for tag in user_image_tag_dict[user_image.UserImage.id] %}
       #{{ tag.tag_name }}
